<resources>
    <string name="app_name">Party Pot</string>
    <string name="new_year_party">New Year Party</string>
    <string name="pay">PAY</string>
    <string name="location_amp_date"><![CDATA[Location & Date]]></string>
    <string name="contact_us">Contact US</string>
    <string name="ticket_price">Ticket Price</string>
    <string name="back">Back</string>
    <string name="my_email">malindudilshaniuhs@gmail.com</string>
    <string name="email">Email</string>
    <string name="contact_us_to_enter_a_event">Contact us to enter a Event…</string>
    <string name="whats_app">Whats App</string>
    <string name="contact_us_to_enter_a_party_pot">Contact us to enter a Party Pot…</string>
    <string name="_94767781290">+94767781290</string>
    <string name="add_event">Add Event</string>
    <string name="pole_party">Pole Party</string>
    <string name="house_party">House Party</string>
    <string name="dance_party">Dance Party</string>
    <string name="glitter_party">Glitter Party</string>
    <string name="newyear_party">NewYear Party</string>
    <string name="summer_party">Summer Party</string>
    <string name="next">Next</string>
    <string name="allocated_places">ALLOCATED PLACES</string>
    <string name="matara">Matara</string>
    <string name="events">Events</string>
    <string name="search_pot">search pot</string>
    <string name="colombo">Colombo</string>
    <string name="add_your_card">  Add Your Card</string>
    <string name="cinnamon_grand">Cinnamon Grand</string>
    <string name="see_view_luxury_table_pool_restaurant">See view , Luxury Table , Pool , Restaurant</string>
    <string name="_9491_3929198">+9491 3929198</string>
    <string name="rs_10_000_00">RS. 10 000.00</string>
    <string name="name">Name</string>
    <string name="card_number">Card Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="colombo_on_20_04_2024">Colombo ON 20–04–2024</string>
    <string name="_18_no_dress_cord_free_for_ladys_open_bar">+18 , No dress cord , Free for lady s , Open bar</string>
    <string name="conditions">Conditions</string>
    <string name="phn">+9491 3929198</string>
    <string name="rs_4_000_00_with_cocktail">RS. 4 000.00 (with Cocktail)</string>
    <string name="emailtag">Email</string>
    <string name="location">Location</string>
    <string name="facilities">Facilities</string>
    <string name="contect_us">Contact US</string>
    <string name="rent">Rent</string>
    <string name="cinammon_grand_galle_rd_colombo">Cinnamon Grand,Galle Rd, colombo.</string>
    <string name="add_place">Add Place</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="enter_your_phone_no">Enter Your Phone No..</string>
    <string name="sing_up">Sing Up</string>
    <string name="enter_username">Enter UserName</string>
    <string name="conform_password">Conform Password</string>
    <string name="exit">Exit</string>
    <string name="welcome">we l  come</string>
    <string name="to">To</string>
    <string name="party_pot">party_pot</string>
    <string name="bb">welcome !</string>
    <string name="jj">Party Pot...</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="not_registered_yet_sign_up">Not Registered Yet , Sign Up !</string>
    <string name="select_image">Select Image</string>
    <string name="title">Title</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="contact_no">Contact NO</string>
    <string name="rent_for_day">Rent For Day (Rs.)</string>
    <string name="google_maps_key" translatable="false">AIzaSyAfJKiM3vebQebYzhYvIP6N7TYdqkG0_lY</string>
    <string name="view_place">Places</string>
    <string name="events_can_you_join">Events Can You Join.</string>
    <string name="search">Search</string>
    <string name="ticket_price_amp_date"><![CDATA[Ticket Price & date]]></string>
    <string name="event_name">Event Name</string>
    <string name="your_s_places">  Your\'s Places</string>
    <string name="uu">Your \'s Places</string>
    <string name="your_events">Your Events</string>
    <string name="update_place">Update Place</string>
</resources>