<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F9FA"
    tools:context=".Placepage">


  <ImageView
      android:id="@+id/imageView5"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
      app:layout_constraintTop_toBottomOf="@+id/textView3"
      app:srcCompat="@drawable/imagecinomen"
      tools:layout_editor_absoluteX="0dp" />

  <TextView
      android:id="@+id/textView3"
      android:layout_width="322dp"
      android:layout_height="49dp"
      android:background="@color/primary"
      android:text="@string/cinnamon_grand"
      android:textSize="30sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.023" />

  <LinearLayout
      android:id="@+id/linearLayout2"
      android:layout_width="363dp"
      android:layout_height="248dp"
      android:orientation="horizontal"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="131dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

      <TextView
          android:id="@+id/textView13"
          android:layout_width="115dp"
          android:layout_height="60dp"
          android:text="@string/location"
          android:textSize="25sp" />

      <TextView
          android:id="@+id/textView19"
          android:layout_width="115dp"
          android:layout_height="60dp"
          android:text="@string/facilities"
          android:textSize="25sp" />

      <TextView
          android:id="@+id/textView20"
          android:layout_width="115dp"
          android:layout_height="60dp"
          android:text="@string/contact_us"
          android:textSize="25sp" />

      <TextView
          android:id="@+id/textView14"
          android:layout_width="115dp"
          android:layout_height="60dp"
          android:text="@string/rent"
          android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

      <TextView
          android:id="@+id/textViewPlace"
          android:layout_width="match_parent"
          android:layout_height="60dp"
          android:text="@string/cinammon_grand_galle_rd_colombo"
          android:textSize="20sp" />

      <TextView
          android:id="@+id/textViewFacilities"
          android:layout_width="match_parent"
          android:layout_height="60dp"
          android:text="@string/see_view_luxury_table_pool_restaurant"
          android:textSize="20sp" />

      <TextView
          android:id="@+id/textViewPhone"
          android:layout_width="match_parent"
          android:layout_height="60dp"
          android:text="@string/_9491_3929198"
          android:textSize="20sp" />

      <TextView
          android:id="@+id/textViewRent"
          android:layout_width="match_parent"
          android:layout_height="60dp"
          android:text="@string/rs_10_000_00"
          android:textSize="20sp" />
    </LinearLayout>
  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>