<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:id="@+id/imageViewPhoto"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/textViewname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:textStyle="bold"
            android:text="@string/name" />
        <TextView
            android:id="@+id/textViewFacilities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:textStyle="bold"
            android:text="@string/facilities" />
        <TextView
            android:id="@+id/textViewContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:textStyle="bold"
            android:text="@string/contact_no" />
        <TextView
            android:id="@+id/textViewRent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:textStyle="bold"
            android:text="@string/rent_for_day" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>