<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".eventPlace">


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="295dp"
        android:layout_height="169dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.118"
        app:srcCompat="@drawable/event1"
        tools:layout_editor_absoluteX="50dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="322dp"
        android:layout_height="49dp"
        android:autoText="true"
        android:background="#673AB7"
        android:text="@string/new_year_party"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        tools:ignore="Deprecated,TextViewEdits" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="369dp"
        android:layout_height="217dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.695"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="184dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView19"
                android:layout_width="115dp"
                android:layout_height="60dp"
                android:text="@string/conditions"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="115dp"
                android:layout_height="60dp"
                android:text="@string/contact_us"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="115dp"
                android:layout_height="60dp"
                android:text="@string/ticket_price"
                android:textSize="23sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="228dp"
            android:layout_height="188dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/_18_no_dress_cord_free_for_ladys_open_bar"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/phn"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:text="@string/rs_4_000_00_with_cocktail"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="374dp"
        android:layout_height="298dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>